# sqlx-query-as-builder

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  plan.md
.claude/: CLAUDE.md
.sqlx/: query-aafbf58802d9eb4da213235651a8e04501b079093b8675726835a78e033be70f.json  query-b051b79a7e3fccb886c36bdffd619e070ff7b8384f711b33d2b1ac01b29e8f54.json  query-b2148c0f695cf6ab8c233b93276312b2b2f9f3d8cbbb84f32bd8951c3b894079.json  query-f1872bedce8b1ac1a34df72d72559816019290e1d05b972ababd5003eb728c7b.json
sqlx-query-as-builder/: Cargo.toml
sqlx-query-as-builder-macros/: Cargo.toml
sqlx-query-as-builder-macros/src/: lib.rs
sqlx-query-as-builder/migrations/: 20251112000000_create_users_table.sql
sqlx-query-as-builder/src/: lib.rs
sqlx-query-as-builder/tests/: integration_test.rs
sqlx-query-as-builder/tests/fixtures/: users.sql
sqlx-query-as-builder/tests/queries/: get_user.sql
